--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -572,17 +572,12 @@ a.text-black.active {
   color: #000000 !important;
 }
 a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-caption) {
+  transition: 0.2s;
   position: relative;
-  background-image: transparent;
+  background-image: linear-gradient(currentColor 50%, currentColor 50%);
   background-size: 10000px 2px;
   background-repeat: no-repeat;
-  background-position: 0px 1.2em;
-  background-position: -10000px 1.2em;
-}
-a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-caption):hover {
-  transition: background-position 2s ease-in-out;
-  background-image: linear-gradient(currentColor 50%, currentColor 50%);
-  background-position: 0px 1.2em;
+  background-position: 0 1.2em;
 }
 .nav-tabs .nav-link.active {
   color: #1982c4;
@@ -830,6 +825,7 @@ a {
 .cid-uCcJchqADd .navbar-nav {
   margin: auto;
   margin-left: 0;
+  margin-left: auto;
 }
 .cid-uCcJchqADd .navbar-nav .nav-item {
   padding: 0 !important;
@@ -1009,7 +1005,7 @@ a {
 }
 @media (min-width: 992px) {
   .cid-uCcJchqADd .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 4.3rem);
+    max-height: calc(98.5vh - 4rem);
   }
 }
 .cid-uCcJchqADd .navbar.collapsed .dropdown-menu .dropdown-submenu {
@@ -1339,71 +1335,149 @@ a {
     padding: 1rem;
   }
 }
-.cid-uCcJchquQs {
-  display: flex;
-  padding-top: 20rem;
-  padding-bottom: 4rem;
-  background-image: url("../../../assets/images/img-8505-2000x1500.jpeg");
+.cid-uCjuaM3CzI {
+  background-color: #ffffff;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
 }
-.cid-uCcJchquQs .mbr-overlay {
-  background-color: #000000;
-  opacity: 0.5;
+.cid-uCjuaM3CzI .carousel {
+  height: 800px;
 }
-@media (min-width: 768px) {
-  .cid-uCcJchquQs {
-    align-items: flex-end;
-  }
-  .cid-uCcJchquQs .row {
-    justify-content: flex-start;
-  }
-  .cid-uCcJchquQs .content-wrap {
-    padding: 1rem 3rem;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-uCcJchquQs .content-wrap {
-    min-width: 50%;
-  }
-}
-@media (max-width: 767px) {
-  .cid-uCcJchquQs {
-    -webkit-align-items: center;
-    align-items: flex-end;
-  }
-  .cid-uCcJchquQs .mbr-row {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-  .cid-uCcJchquQs .content-wrap {
-    width: 100%;
-  }
-}
-.cid-uCcJchquQs .mbr-fallback-image.disabled {
-  display: none;
-}
-.cid-uCcJchquQs .mbr-fallback-image {
-  display: block;
-  background-size: cover;
-  background-position: center center;
+.cid-uCjuaM3CzI .carousel img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+.cid-uCjuaM3CzI .carousel-item,
+.cid-uCjuaM3CzI .carousel-inner {
+  height: 100%;
+}
+.cid-uCjuaM3CzI img,
+.cid-uCjuaM3CzI .item-wrapper {
+  border-radius: 0 !important;
+}
+.cid-uCjuaM3CzI .carousel-caption {
+  bottom: 40px;
+}
+.cid-uCjuaM3CzI .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-uCjuaM3CzI .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-uCjuaM3CzI .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-uCjuaM3CzI .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-uCjuaM3CzI .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-uCjuaM3CzI .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-uCjuaM3CzI .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-uCjuaM3CzI .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-uCjuaM3CzI .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-uCjuaM3CzI .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-uCjuaM3CzI .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-uCjuaM3CzI .carousel-indicators {
   position: absolute;
-  top: 0;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
 }
-.cid-uCcJchquQs .mbr-section-title,
-.cid-uCcJchquQs .mbr-section-subtitle {
+.cid-uCjuaM3CzI .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-uCjuaM3CzI .carousel-indicators li.active,
+.cid-uCjuaM3CzI .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-uCjuaM3CzI .carousel-indicators li::after,
+.cid-uCjuaM3CzI .carousel-indicators li::before {
+  content: none;
+}
+.cid-uCjuaM3CzI .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
   text-align: center;
-  color: #ffc091;
 }
-.cid-uCcJchquQs .mbr-text,
-.cid-uCcJchquQs .mbr-section-btn {
-  text-align: center;
+@media (max-width: 768px) {
+  .cid-uCjuaM3CzI .carousel-indicators {
+    display: none !important;
+  }
 }
-.cid-uCcJchquQs .mbr-section-title {
-  color: #8AC926;
+@media (max-width: 991px) {
+  .cid-uCjuaM3CzI .mbr-section-subtitle,
+  .cid-uCjuaM3CzI .mbr-section-text,
+  .cid-uCjuaM3CzI .mbr-section-btn {
+    text-align: center;
+  }
 }
-.cid-uCcJchquQs .mbr-section-subtitle {
-  color: #8AC926;
+.cid-uCjLfBw1w6 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-uCjLfBw1w6 .item:focus,
+.cid-uCjLfBw1w6 span:focus {
+  outline: none;
+}
+.cid-uCjLfBw1w6 .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+  overflow: hidden;
+}
+.cid-uCjLfBw1w6 .content-head {
+  max-width: 800px;
+}
+.cid-uCjLfBw1w6 .item {
+  color: #232323;
+  min-height: 90px;
+}
+@media (max-width: 768px) {
+  .cid-uCjLfBw1w6 .item {
+    min-height: 45px;
+  }
 }
 .cid-uCcJchqTua {
   padding-top: 2rem;
@@ -1548,101 +1622,77 @@ a {
 .cid-uCcJchqfTw .content-head {
   max-width: 800px;
 }
-.cid-uCcJchqurN {
-  padding-top: 1rem;
-  padding-bottom: 0rem;
+.cid-uCjsGdfCgh {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-uCcJchqurN .item:focus,
-.cid-uCcJchqurN span:focus {
-  outline: none;
+.cid-uCjsGdfCgh .mbr-media {
+  position: relative;
 }
-.cid-uCcJchqurN .item {
-  cursor: pointer;
-}
-.cid-uCcJchqurN .grid-container {
-  grid-row-gap: 2rem;
-}
-@media (max-width: 767px) {
-  .cid-uCcJchqurN .grid-container {
-    grid-row-gap: 1rem;
-  }
-}
-.cid-uCcJchqurN .grid-container-1,
-.cid-uCcJchqurN .grid-container-2,
-.cid-uCcJchqurN .grid-container-3 {
-  gap: 0 2rem;
-}
-@media (max-width: 767px) {
-  .cid-uCcJchqurN .grid-container-1,
-  .cid-uCcJchqurN .grid-container-2,
-  .cid-uCcJchqurN .grid-container-3 {
-    gap: 0 1rem;
-  }
-}
-.cid-uCcJchqurN .mbr-section-title {
-  color: #000000;
-}
-.cid-uCcJchqurN .mbr-text,
-.cid-uCcJchqurN .mbr-section-btn {
-  color: #000000;
-}
-.cid-uCcJchqurN .content-head {
-  max-width: 800px;
-}
-.cid-uCcJchqurN .container,
-.cid-uCcJchqurN .container-fluid {
-  overflow: hidden;
-}
-.cid-uCcJchqurN .grid-container {
-  display: grid;
-  transform: translate3d(-3rem, 0, 0);
-  width: 115vw;
-  grid-column-gap: 1rem;
-}
-.cid-uCcJchqurN .grid-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.cid-uCcJchqurN .grid-item img {
-  min-width: 30vw;
-  max-width: 100%;
-  max-height: 100%;
+.cid-uCjsGdfCgh .mbr-media img {
+  width: 100%;
   object-fit: cover;
 }
-@media (max-width: 767px) {
-  .cid-uCcJchqurN .grid-item img {
-    min-width: 35vw;
-  }
+.cid-uCjsGdfCgh a:hover {
+  background-image: none !important;
 }
-.cid-uCcJchqurN .grid-container-1,
-.cid-uCcJchqurN .grid-container-2,
-.cid-uCcJchqurN .grid-container-3 {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-columns: 1fr;
-  grid-auto-flow: column;
+.cid-uCjsGdfCgh .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
-.cid-uCcJchqurN .grid-container-1 {
-  align-items: flex-end;
+.cid-uCjsGdfCgh .mbr-media span {
+  font-size: 5rem;
+  transition: all 0.2s;
 }
-.cid-uCcJchqurN .grid-container-2 {
-  align-items: flex-start;
+.cid-uCjsGdfCgh .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
 }
-.cid-uCcJchqtbS {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  background-color: #ffffff;
+.cid-uCjsGdfCgh .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
 }
-.cid-uCcJchqtbS .mbr-fallback-image.disabled {
+.cid-uCjsGdfCgh .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-uCjsGdfCgh .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uCjsGdfCgh .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uCjsGdfCgh .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-uCcJchqtbS .item-wrapper {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.cid-uCcJchqtbS .mbr-fallback-image {
+.cid-uCjsGdfCgh .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1651,35 +1701,380 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-uCcJchqtbS .mbr-iconfont {
-  display: inline-flex;
-  font-size: 2rem;
-  color: #d70081;
-  width: 80px;
-  justify-content: center;
-  align-items: center;
-  background: #ffd7ef;
-  height: 80px;
-  border-radius: 50%;
-}
-.cid-uCcJchqtbS .card-title,
-.cid-uCcJchqtbS .iconfont-wrapper,
-.cid-uCcJchqtbS .card-text {
-  color: #000000;
-  text-align: center;
-}
-.cid-uCcJchqtbS .content-head {
+.cid-uCjsGdfCgh .content-head {
   max-width: 800px;
 }
-.cid-uCcJchqtbS .mbr-section-title {
-  color: #000000;
-}
-.cid-uCcJchqtbS .mbr-section-btn {
+.cid-uCjsGdfCgh .mbr-section-title {
   text-align: center;
 }
-.cid-uCcJchqtbS .card-title,
-.cid-uCcJchqtbS .iconfont-wrapper {
-  color: #1982C4;
+.cid-uCjGJ4RGwN {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-uCjGJ4RGwN .item:focus,
+.cid-uCjGJ4RGwN span:focus {
+  outline: none;
+}
+.cid-uCjGJ4RGwN .item {
+  cursor: pointer;
+}
+.cid-uCjGJ4RGwN .grid-container {
+  grid-row-gap: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uCjGJ4RGwN .grid-container {
+    grid-row-gap: 1rem;
+  }
+}
+.cid-uCjGJ4RGwN .grid-container-1,
+.cid-uCjGJ4RGwN .grid-container-2 {
+  gap: 0 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uCjGJ4RGwN .grid-container-1,
+  .cid-uCjGJ4RGwN .grid-container-2 {
+    gap: 0 1rem;
+  }
+}
+.cid-uCjGJ4RGwN .mbr-section-title {
+  color: #000000;
+}
+.cid-uCjGJ4RGwN .mbr-text,
+.cid-uCjGJ4RGwN .mbr-section-btn {
+  color: #000000;
+}
+.cid-uCjGJ4RGwN .content-head {
+  max-width: 800px;
+}
+.cid-uCjGJ4RGwN .container,
+.cid-uCjGJ4RGwN .container-fluid {
+  overflow: hidden;
+}
+.cid-uCjGJ4RGwN .grid-container {
+  display: grid;
+  transform: translate3d(-3rem, 0, 0);
+  width: 115vw;
+  grid-column-gap: 1rem;
+}
+.cid-uCjGJ4RGwN .grid-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cid-uCjGJ4RGwN .grid-item img {
+  min-width: 30vw;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+@media (max-width: 767px) {
+  .cid-uCjGJ4RGwN .grid-item img {
+    min-width: 35vw;
+  }
+}
+.cid-uCjGJ4RGwN .grid-container-1,
+.cid-uCjGJ4RGwN .grid-container-2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+}
+.cid-uCjGJ4RGwN .grid-container-1 {
+  align-items: flex-end;
+}
+.cid-uCjGJ4RGwN .grid-container-2 {
+  align-items: flex-start;
+}
+.cid-uCjOtYTEFQ {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-uCjOtYTEFQ .item {
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uCjOtYTEFQ .item {
+    margin-bottom: 1rem;
+  }
+}
+.cid-uCjOtYTEFQ .item-wrapper {
+  height: 100%;
+  position: relative;
+}
+.cid-uCjOtYTEFQ .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-uCjOtYTEFQ .item-wrapper .icon-wrapper {
+  pointer-events: none;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  left: 50%;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid transparent;
+  border-radius: 50%;
+  opacity: 0;
+  color: #464845 !important;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: #edefea !important;
+  transition: 0.2s;
+}
+.cid-uCjOtYTEFQ .item-wrapper:hover .icon-wrapper {
+  opacity: 1;
+}
+.cid-uCjOtYTEFQ .carousel-control,
+.cid-uCjOtYTEFQ .close {
+  background: #1b1b1b;
+}
+.cid-uCjOtYTEFQ .carousel-control-prev {
+  margin-left: 2.5rem;
+}
+.cid-uCjOtYTEFQ .carousel-control-prev span {
+  margin-right: 5px;
+}
+.cid-uCjOtYTEFQ .carousel-control-next {
+  margin-right: 2.5rem;
+}
+.cid-uCjOtYTEFQ .carousel-control-next span {
+  margin-left: 5px;
+}
+.cid-uCjOtYTEFQ .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  font-family: 'Moririse2';
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-uCjOtYTEFQ .close::before {
+  content: '\e91a';
+}
+.cid-uCjOtYTEFQ .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-uCjOtYTEFQ .carousel-control {
+  display: flex;
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-uCjOtYTEFQ .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-uCjOtYTEFQ .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-uCjOtYTEFQ .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-uCjOtYTEFQ .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3px;
+}
+.cid-uCjOtYTEFQ .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-uCjOtYTEFQ .carousel-indicators li.active,
+.cid-uCjOtYTEFQ .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-uCjOtYTEFQ .carousel-indicators li::after,
+.cid-uCjOtYTEFQ .carousel-indicators li::before {
+  content: none;
+}
+.cid-uCjOtYTEFQ .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-uCjOtYTEFQ .carousel-indicators {
+    display: none !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-uCjOtYTEFQ .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uCjOtYTEFQ .carousel-indicators {
+    display: none;
+  }
+}
+.cid-uCjOtYTEFQ .carousel-inner {
+  display: flex;
+  align-items: center;
+}
+.cid-uCjOtYTEFQ .carousel-inner > .active {
+  display: block;
+}
+.cid-uCjOtYTEFQ .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-uCjOtYTEFQ .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-uCjOtYTEFQ .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 768px) {
+  .cid-uCjOtYTEFQ .carousel-control,
+  .cid-uCjOtYTEFQ .carousel-indicators,
+  .cid-uCjOtYTEFQ .modal .close {
+    position: fixed;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uCjOtYTEFQ .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 20px;
+  }
+  .cid-uCjOtYTEFQ .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-uCjOtYTEFQ .carousel-indicators .active,
+.cid-uCjOtYTEFQ .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #000000;
+  opacity: 0.5;
+  border: 4px solid #000000;
+}
+.cid-uCjOtYTEFQ .carousel-indicators .active {
+  background: #fff;
+}
+.cid-uCjOtYTEFQ .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-uCjOtYTEFQ .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-uCjOtYTEFQ .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-uCjOtYTEFQ .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-uCjOtYTEFQ .modal-body {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.cid-uCjOtYTEFQ .modal-body img {
+  width: 100%;
+  object-fit: contain;
+  max-height: calc(100vh - 1.75rem);
+}
+.cid-uCjOtYTEFQ .carousel {
+  width: 100%;
+}
+.cid-uCjOtYTEFQ .modal-backdrop.in {
+  opacity: 0.8;
+}
+.cid-uCjOtYTEFQ .modal.fade .modal-dialog {
+  transition: margin-top 0.3s ease-out;
+}
+.cid-uCjOtYTEFQ .modal.fade .modal-dialog,
+.cid-uCjOtYTEFQ .modal.in .modal-dialog {
+  transform: none;
+}
+.cid-uCjOtYTEFQ .mbr-gallery .item-wrapper {
+  cursor: pointer;
+}
+.cid-uCjOtYTEFQ .content-head {
+  max-width: 800px;
+}
+.cid-uCjHr4lCB2 {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-uCjHr4lCB2 .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-uCjHr4lCB2 .mbr-section-subtitle {
+  color: #000000;
+  text-align: left;
+}
+.cid-uCjHr4lCB2 .mbr-section-title {
+  text-align: left;
+  color: #000000;
+}
+.cid-uCjHr4lCB2 .mbr-card-title {
+  color: #000000;
+  text-align: left;
+}
+.cid-uCjHr4lCB2 .mbr-card-subtitle {
+  color: #000000;
+  text-align: left;
+}
+.cid-uCjHr4lCB2 .mbr-text,
+.cid-uCjHr4lCB2 .item .mbr-section-btn {
+  text-align: left;
 }
 .cid-uCcJchrO0i {
   padding-top: 1rem;
